--- a/khyeras/styles/khyeras_v1/template/partials/viewtopic_badges.html
+++ b/khyeras/styles/khyeras_v1/template/partials/viewtopic_badges.html
@@ -1,18 +1,19 @@
 {% import 'utilities/macros.html' as function %}
-{% for post in postrow.khy if post.PROFILE_BADGES %}
+{% if postrow.PROFILE_C_BADGES_VALUE && KHY_BADGES %}
 	{% set badge_limit = 5 %}
 	<dd class="profile-badges">
 		<div class="badge-list">
-			{% for badge in post.PROFILE_BADGES | slice(0, badge_limit) %}
-				<a href="{{ ROOT_PATH }}gameplay-badges#{{ badge.type }}-{{ function.create_handle(badge.title) }}" class="badge-list-link">
-					<img src="{{ ROOT_PATH }}{{ badge.image }}" alt="{{ badge.title }}" title="{{ badge.title }}" />
-				</a>
+			{% set badge_list = postrow.PROFILE_C_BADGES_VALUE | split(', ') %}
+			{% for badge in badge_list | slice(0, badge_limit) %}
+				{% include 'partials/badge_item.html' %}
 			{% endfor %}
-			{% if post.PROFILE_BADGES | length > badge_limit %}
-				<a href="{postrow.U_POST_AUTHOR}" class="badge-list-link badge-list-link-more" title="More Badges">
-					<i class="icon fa-plus fa-fw" aria-hidden="true"></i>
-				</a>
+			{% if badge_list | length > badge_limit %}
+				<div class="badge-item">
+					<a href="{postrow.U_POST_AUTHOR}" class="badge-value badge-value-more" title="More Badges">
+						<i class="icon fa-plus fa-fw" aria-hidden="true"></i>
+					</a>
+				</div>
 			{% endif %}
 		</div>
 	</dd>
-{% endfor %}
+{% endif %}
